2006-01-23  Atsushi Enomoto  <atsushi@ximian.com>

	* ISO2022JP.cs GB18030Encoding.cs CP936.cs CP51932.cs:
	  fix warnings.

2006-01-23  Atsushi Enomoto  <atsushi@ximian.com>

	* CP950.cs :
	  This was the last one encoding which needed incomplete byte
	  handling.
	* DbcsEncoding.cs, GB18030Encoding.cs, CP950.cs, CP932.cs,
	  CP936.cs, CP51932.cs, CP949.cs (all):
	  Made GetCharCount() and GetChars() in DbcsDecoder as different
	  internal CheckRange() methods (it is bad design to have those
	  methods as base methods). Use CheckRange() everywhere.

2006-01-23  Atsushi Enomoto  <atsushi@ximian.com>

	* CP949.cs :
	  handle incomplete byte (thus conversion implementation went into
	  CP949Decoder like other DBCS encodings).

2006-01-23  Atsushi Enomoto  <atsushi@ximian.com>

	* CP936.cs :
	  handle incomplete byte (thus conversion implementation went into
	  CP936Decoder like other DBCS encodings).

2006-01-20  Atsushi Enomoto  <atsushi@ximian.com>

	* CP51932.cs :
	  Encoding.GetChars() does not handle incomplete bytes but
	  Decoder.GetChars() should do it (which was has vanished
	  when I fixed CP51932 4 days ago). Now it uses Decoder which
	  preserves incomplete byte like CP932 and CP54936.

2006-01-20  Atsushi Enomoto  <atsushi@ximian.com>

	* CP932.cs :
	  Implemented Decoder to handle incomplete bytes correctly. Hold
	  different incomplete bytes for GetChars() and GetCharCount().
	  "reflesh" parameter in 2.0 is now handled correctly.
	  Now GetChars()/GetCharCount() in Encoding are implemented
	  correctly to use Decoder.

2006-01-20  Atsushi Enomoto  <atsushi@ximian.com>

	Fixed bug #77307.
	* GB18030Encoding.cs : GetEncoder() and GetDecoder() should be
	  overriden. in the Encoder, refresh parameter should handle
	  incomplete field at its end of processing. Also it should
	  differentiate GetByteCount() and GetChars() for its internal
	  state.
	* GB18030Source.cs : handle end index of GB18030Map as inclusive,