@@ -1,3 +1,7 @@
+2006-01-23  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* CP57002.cs : Added GetByteCountImpl().
+
 2006-01-17  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* CP1251.cs CP28594.cs CP28595.cs CP1257.cs CP1258.cs CP57002.cs
